<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Display area -->
    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:textSize="60sp"
        android:textColor="#000000"
        android:padding="16dp"/>

    <!-- Calculator buttons -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="16dp"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <!-- AC button -->
        <Button
            android:id="@+id/buttonAC"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_ac"
            style="@style/buttonStyle" />

        <!-- +/- button -->
        <Button
            android:id="@+id/buttonPlusMinus"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_plus_minus"
            style="@style/buttonStyle" />

        <!-- % button -->
        <Button
            android:id="@+id/buttonPercent"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_percent"
            style="@style/buttonStyle" />

        <!-- ÷ button -->
        <Button
            android:id="@+id/buttonDivide"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_divide"
            style="@style/buttonStyle" />

        <!-- 7 button -->
        <Button
            android:id="@+id/button7"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_7"
            style="@style/buttonStyle" />

        <!-- 8 button -->
        <Button
            android:id="@+id/button8"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_8"
            style="@style/buttonStyle" />

        <!-- 9 button -->
        <Button
            android:id="@+id/button9"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_9"
            style="@style/buttonStyle" />

        <!-- × button -->
        <Button
            android:id="@+id/buttonMultiply"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_multiply"
            style="@style/buttonStyle" />

        <!-- 4 button -->
        <Button
            android:id="@+id/button4"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_4"
            style="@style/buttonStyle" />

        <!-- 5 button -->
        <Button
            android:id="@+id/button5"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_5"
            style="@style/buttonStyle" />

        <!-- 6 button -->
        <Button
            android:id="@+id/button6"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_6"
            style="@style/buttonStyle" />

        <!-- - button -->
        <Button
            android:id="@+id/buttonMinus"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_minus"
            style="@style/buttonStyle" />

        <!-- 1 button -->
        <Button
            android:id="@+id/button1"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_1"
            style="@style/buttonStyle" />

        <!-- 2 button -->
        <Button
            android:id="@+id/button2"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_2"
            style="@style/buttonStyle" />

        <!-- 3 button -->
        <Button
            android:id="@+id/button3"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_3"
            style="@style/buttonStyle" />

        <!-- + button -->
        <Button
            android:id="@+id/buttonPlus"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_plus"
            style="@style/buttonStyle" />

        <!-- 0 button -->
        <Button
            android:id="@+id/button0"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"
            android:text="@string/button_0"
            style="@style/buttonStyle" />

        <!-- . button -->
        <Button
            android:id="@+id/buttonDot"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_dot"
            style="@style/buttonStyle" />

        <!-- = button -->
        <Button
            android:id="@+id/buttonEquals"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/button_equals"
            style="@style/buttonStyle" />

    </GridLayout>
</LinearLayout>